--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,19 +13,19 @@ html
         a.links(href='/').nav-heading MembersOnly 
         div   
           a.links(href='/post') 
-            h2 message
-            i.material-icons add
+            h2 Message
+            i.material-icons chat
           a.links(href='/log-out') 
-            h2 logout
+            h2 Logout
             i.material-icons logout
       else 
         a(href='/').nav-heading MembersOnly 
         div   
           a.links(href='/post') 
-            h2 message
-            i.material-icons add
+            h2 Message
+            i.material-icons chat
           a.links(href='/log-in') 
-            h2 login
+            h2 Login
             i.material-icons login
 
     block content
