--- a/views/login.jade
+++ b/views/login.jade
@@ -1,8 +1,7 @@
 extends layout
 
 block content
-  h1.create-post-header Hello to login
-
+  h1.create-post-header Login
   form.create-post-form.log-in(action="" method="POST")
     label.label(for="username") Username:
     if errors&&!incorrect
