--- a/views/index.jade
+++ b/views/index.jade
@@ -18,7 +18,7 @@ block content
             h2 #{message._doc.title}
             p #{message._doc.message}
             div 
-              h3 by Anon
-              p unknown
+              h3 By Anonymous 
+              p Date: unknown
             .note Note: Login to see who posted and when
             
