--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,6 +26,6 @@ html
             i.material-icons chat
           a.links(href='/log-in') 
             h2 Login
-            i.material-icons login
+            i.material-icons person
 
     block content
