--- a/views/post.jade
+++ b/views/post.jade
@@ -17,4 +17,4 @@ block content
     else
         div.elsecontainer
             h1.please Please log in to create a post 
-            a.redirect-login(href='/log-in') Log in
+            a.redirect-login(href='/log-in') Log in!
