--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title Members Only
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald&display=swap")
     link(rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito&display=swap")
